re-work graph building logic for view filtering